fix(web-components): fixes icon size issue on toggle button
fixes issue with icon being too small when button text is wrapped

--- a/packages/web-components/src/components/ic-toggle-button/ic-toggle-button.css
+++ b/packages/web-components/src/components/ic-toggle-button/ic-toggle-button.css
@@ -33,6 +33,11 @@
   height: inherit;
 }
 
+:host ic-button {
+  --icon-width: var(--ic-space-lg);
+  --icon-height: var(--ic-space-lg);
+}
+
 :host(.expand-toggle-group-child) ic-button {
   min-width: 100%;
   min-height: 100%;
